fix project link dark mode color

--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -24,6 +24,9 @@
         @include text;
     }
     .link {
+        @include darkMode {
+            color: $dark-scheme-color;
+        }
         @include unLink;
         cursor: pointer;
         display: unset;
